# src/swagger/app_api/components/profile.yaml
@@ -18,6 +18,12 @@ components:
                     description: province id
                 introduction:
                     type: string
+                jobTypeId:
+                    type: number
+                    description: Job type id
+                jobTypeName:
+                    type: string
+                    description: Job type name
             required:
                 - name
                 - birthday
